feat(#4): display account balances
