# src/main/java/ch/postfinance/swiss/hacks/resource/AccountsResourceImpl.java
@@ -1,10 +1,16 @@
 package ch.postfinance.swiss.hacks.resource;
 
+import ch.postfinance.swiss.hacks.domain.Account;
 import ch.postfinance.swiss.hacks.resource.beans.AccountBalance;
 import io.quarkus.security.Authenticated;
 import io.quarkus.security.identity.SecurityIdentity;
+import jakarta.annotation.security.RolesAllowed;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
+
+import java.util.List;
+
+import static ch.postfinance.swiss.hacks.SecurityUtils.currentLogin;
 
 @Authenticated
 public class AccountsResourceImpl implements AccountsResource {
@@ -12,12 +18,22 @@ public class AccountsResourceImpl implements AccountsResource {
     @Inject
     SecurityIdentity securityIdentity;
 
-    @Override
-    public AccountBalance checkAccountBalance() {
+    private static AccountBalance getAccountBalance(Account a) {
         var accountBalance = new AccountBalance();
-        accountBalance.setAccountId(securityIdentity.getPrincipal().getName());
-        accountBalance.setBalance(100.0);
+        accountBalance.setIban(a.iban);
+        accountBalance.setBalance(a.balanceInCentimes().toEngineeringString());
         return accountBalance;
+    }
+
+    @Override
+    @RolesAllowed("user")
+    public List<AccountBalance> checkAccountBalance() {
+        return currentLogin(securityIdentity)
+                .map(l -> l.accounts)
+                .map(accounts -> accounts.stream()
+                        .map(AccountsResourceImpl::getAccountBalance)
+                        .toList())
+                .orElseThrow();
     }
 
     @Override
